<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/cache_title"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/textsize18" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/cache_content"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/textsize16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            style="@style/cache_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cache_ok" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray_background" />

        <Button
            android:id="@+id/button2"
            style="@style/cache_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cache_no" />
    </LinearLayout>

</LinearLayout>