<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/set_wifi"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/click_selector_transparent"
            android:drawableLeft="@drawable/setting_icon1"
            android:drawablePadding="10.0dip"
            android:drawableRight="@drawable/setting_open"
            android:gravity="left|center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/set_wifi"
            android:textColor="@color/gray_text" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@color/line"
            android:drawablePadding="10.0dip" />

        <TextView
            android:id="@+id/set_suggestion"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/click_selector_transparent"
            android:drawableLeft="@drawable/setting_icon2"
            android:drawablePadding="10.0dip"
            android:drawableRight="@drawable/details_back"
            android:gravity="left|center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/set_suggestion"
            android:textColor="@color/gray_text" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@color/line"
            android:drawablePadding="10.0dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/click_selector_transparent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/set_check"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawableLeft="@drawable/setting_icon3"
                android:drawablePadding="10.0dip"
                android:gravity="left|center"
                android:paddingLeft="15dp"
                android:background="@drawable/click_selector_transparent"
                android:text="@string/set_check"
                android:textColor="@color/gray_text" />

            
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@color/line"
            android:drawablePadding="10.0dip" />

        <TextView
            android:id="@+id/set_clean"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/click_selector_transparent"
            android:drawableLeft="@drawable/setting_icon4"
            android:drawablePadding="10.0dip"
            android:gravity="left|center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/set_clean"
            android:textColor="@color/gray_text" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@color/line"
            android:drawablePadding="10.0dip" />

        <TextView
            android:id="@+id/set_about"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/click_selector_transparent"
            android:drawableLeft="@drawable/setting_icon5"
            android:drawablePadding="10.0dip"
            android:gravity="left|center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/set_about"
            android:textColor="@color/gray_text" />
    </LinearLayout>

</LinearLayout>